fix overflow

--- a/style.css
+++ b/style.css
@@ -246,7 +246,8 @@ button:active, button.pressed, .button:active, .button.pressed {
     padding-left: 5px; padding-top: 5px;
     height: auto;
     border: 1px solid #bbb;
-    overflow: hidden;
+    overflow-y: auto;
+    overflow-x: hidden;
   }
 
   .blockheader {
